<resources>
    <string name="app_name">TalentSoftTestWallyd</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="source">Source : </string>
    <string name="author">Author : </string>
    <string name="this_a_title">this a title</string>
    <string name="description">this is a description</string>
    <string name="publishedAt">publié le 12/10/2021</string>
    <string name="content">content</string>
</resources>