<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewsDetailFragment">

    <ImageView
        android:id="@+id/news_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/textView_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/news_image" />

    <TextView
        android:id="@+id/textview_published_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/publishedAt"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_source"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_author" />


    <TextView
        android:id="@+id/textView_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/source"
        app:layout_constraintStart_toStartOf="@+id/textView_author"
        app:layout_constraintTop_toBottomOf="@+id/textView_author" />

    <TextView
        android:id="@+id/textView_author"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:hint="@string/author"
        app:layout_constraintStart_toStartOf="@+id/textView_content"
        app:layout_constraintTop_toBottomOf="@+id/textView_content" />


</androidx.constraintlayout.widget.ConstraintLayout>