<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/textView_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/this_a_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/light_greyish"
        app:layout_constraintEnd_toEndOf="@+id/textview_published_at"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_title"
        app:layout_constraintTop_toBottomOf="@+id/textview_published_at">

    </View>

    <TextView
        android:id="@+id/textview_published_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/publishedAt"
        android:layout_marginTop="8dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_description"
        app:layout_constraintTop_toBottomOf="@+id/textView_description" />

    <TextView
        android:id="@+id/textView_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="@+id/textView_title"
        app:layout_constraintStart_toStartOf="@+id/textView_title"
        app:layout_constraintTop_toBottomOf="@+id/textView_title" />
</androidx.constraintlayout.widget.ConstraintLayout>